# Fearless

./: .classpath  .gitignore  .jqwik-database  .project  README.md  pom.xml  setup-go.xml  useful.txt
.github/: maven-package.yml
.github/workflows/: maven-package.yml
.zed/: settings.json
antlrGrammars/: Example.g4  Fearless.g4
artefacts/: .gitignore
artefacts/allBase/: allBase.txt
assets/: .gitignore  default-aliases.fear  default-imm-aliases.fear  highlighting.js
assets/allBase/: allBase.txt
assets/base/: actions.fear  assertions.fear  benchmarking.fear  blocks.fear  bools.fear  bytes.fear  comparisons.fear  dom.fear  (+20 more)
compiler/: .gitignore  README.md  pom.xml  setup-go.xml
compiler-tests/: README.md
formal/: Discussing about Fearless.odt  TopLevelStructure.txt  formalism as of 27th Jan 2023.txt  inferrence_example.txt  old_recMdf_examples.txt
grammar/: pom.xml
legacy/: old-tour-text.txt
lib/: antlr-4.11.1-complete.jar.REMOVED.git-id  jackson-databind-2.13.4-javadoc.jar.REMOVED.git-id  truffle-api-22.3.1.jar.REMOVED.git-id
native-runtime/: Cargo.toml  build_all.sh  build_wasm.sh
native-runtime/src/: lib.rs  wasm_bindings.rs
native-runtime/src/compiler/: mod.rs  str_hash.rs
native-runtime/src/regex/: mod.rs
native-runtime/src/strings/: conversions.rs  fearless_str.rs  mod.rs
plt-redex/: fearless-heart.rkt
primordialExamples/: Base.Fear  Block.Fear  Bool.Fear  BreakingExamples.Fear  Eq.Fear  Errors.Fear  IOIdeas.txt  Iter.Fear  LList.Fear  ListOnOptionals.Fear  Num.Fear  Optional.Fear  ParObservable.Fear  Ref.Fear  Res.fear  StandardLibrary.Fear  Stream.Fear  Trampoline.Fear  UBox.Fear  VariablesExamples.Fear  lists2.fear  lists3.fear
resources/: .gitignore  default-aliases.fear  highlighting.js  style.css
rt-libs/native-rt/: Cargo.toml  build_all.sh
rt-libs/native-rt/src/: lib.rs  strings.rs
src/: module-info.java
(+1666 files in other folders)
