[package]
name = "native-rt"
version = "0.1.0"
edition = "2021"

[lib]
name = "native_rt"
crate-type = ["cdylib"]

[features]
compiler-only = ["seahash"]
runtime-only = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common
jni = { version = "0.21.1" }
unicode-segmentation = { version = "1.11.0" }
# RT Only
# Compiler Only
seahash = { version = "4.1.0", optional = true, features = ["use_std"] }

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"
