[package]
name = "native-rt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.21.1" }
unicode-segmentation = { version = "1.11.0" }

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"
